# ColoroidCPP

./: .gitignore  CMakeLists.txt
include/: coloroid_game_stats.h  console_logo.h  game_core.h  term_info.h
src/: console_logo.cpp  console_logo.h  game_par.cpp  game_par.h  main.cpp  term_info.h  term_info_LINUX.cpp  term_info_WIN.cpp
